# Czkawka

./: .gitignore  Cargo.toml  README.md  Rocket.toml
.github/workflows/: rust.yml
examples/: buffer_iterator.rs  main.rs
src/: main.rs  router.rs  tests.rs
src/admin/: main.rs
src/api/: admin.rs  templater.rs
src/broker/: main.rs  router.rs  tests.rs
src/broker/api/: admin.rs  mod.rs  receiver.rs  templater.rs
src/broker/receiver/: message.rs  mod.rs  receiver.rs  receiver_endpoint.rs  storage.rs
src/broker/storage/: storage.rs
src/broker/topic/: mod.rs  publisher_service.rs  topic_service.rs
src/broker/web/: index.component  index.html  main.component  topic.component
src/call/: call_controller.rs  main.rs
src/copperdb/: api.rs  copper.rs  main.rs  tests.rs
src/echo/: main.rs
src/examples/: errors.rs
src/kopperdb/: api.rs  brass.rs  kopper.rs  main.rs  stats.rs  tests.rs
src/kopperdb/tests/: brass_tests.rs  common.rs  kopper_tests.rs  mod.rs
src/lib/: brass.rs  error_utils.rs  kopper.rs  lib.rs  stats.rs
src/partition/: entry_collection.rs  mod.rs  partition.rs  tests.rs
src/storage/: storage.rs  storage_client.rs
src/topic/: mod.rs  publisher_service.rs  topic_service.rs
src/web/: main.component  topic.component
