[package]
name = "czkawka"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "=0.5.0-rc.3"
reqwest = "0.11.19"
tokio = "1"

[[bin]]
name = "call"
path = "src/call/main.rs"

[[bin]]
name = "echo"
path = "src/echo/main.rs"