[package]
name = "czkawka"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "=0.5.0-rc.3", features = ["json"]}
serde = { version = "1.0" }
reqwest = "0.11.19"
tokio = "1"
plotters = "0.3.3"
rand = "0.8.5"

[[bin]]
name = "call"
path = "src/call/main.rs"

[[bin]]
name = "echo"
path = "src/echo/main.rs"

[[bin]]
name = "kopperdb"
path = "src/kopperdb/main.rs"

[[bin]]
name = "broker"
path = "src/broker/main.rs"

[lib]
path = "src/lib/lib.rs"