[package]
name = "czkawka"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "=0.5.0", features = ["json"]}
serde = { version = "1.0" }
reqwest = "0.11.19"
plotters = "0.3.3"
rand = "0.8.5"
thiserror = "1.0.56"
anyhow = "1.0.79"
kopperdb = "0.1.0"
bincode = "2.0.0-rc.3"
